--- a/components/shared/Post/SaveButton/save-button.module.css
+++ b/components/shared/Post/SaveButton/save-button.module.css
@@ -31,7 +31,7 @@
   }
 
   &:hover {
-    background-color: var(--gray-100);
+    background-color: var(--bg-content-hover);
   }
 
   &:active {
